<resources>
    <string name="app_name">SchoolMarket</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="search_title">Search…</string>

    <!--登录界面-->
    <string name="login">登录</string>
    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>

    <!--注册界面-->
    <string name="register">注册</string>
    <string name="register_username">用户名</string>
    <string name="register_password">密码</string>
    <string name="register_rep_password">重复密码</string>
    <string name="register_title">加入我们</string>
    <string name="register_action_next">下一步</string>

    <!--注册手机号界面-->
    <string name="register_next_phone">手机号</string>
    <string name="register_next_code">验证码</string>
    <string name="register_next_get_code">获取验证码</string>
    <string name="register_next_sub">GO</string>

    <!--main drawer item-->
    <string name="nav_personal_info">个人信息</string>
    <string name="nav_buying">待确认</string>
    <string name="nav_bought">已买</string>
    <string name="nav_selling">正在卖</string>
    <string name="nav_sold">已卖</string>
    <string name="nav_like">收藏</string>
    <string name="nav_msg">消息</string>
    <string name="nav_share">推荐给朋友</string>
    <string name="nav_setting">设置</string>
    <string name="nav_about">关于闲货</string>
    <string name="nav_exit">退出</string>
    <string name="nav_other">其它</string>
    <string name="nav_notice">公告管理</string>

    <!--main activity-->
    <string name="main_title">发现</string>
    <string name="main_header_username">用户名</string>
    <string name="main_header_phone">手机号码</string>

    <!--trade tag detail item-->
    <string name="trade_tag_item_name">name</string>
    <string name="trade_tag_item_new_price">now price</string>
    <string name="trade_tag_item_original_price">original price</string>

    <!--trade add activity-->
    <string name="trade_add_title">发布</string>
    <string name="trade_add_content_title">标题</string>
    <string name="trade_add_content_now_price">价格(元)</string>
    <string name="trade_add_content_original_price">原价(元)</string>
    <string name="trade_add_content_describe">描述</string>
    <string name="trade_add_content_tag_select">设置分类</string>

    <!--trade detail-->
    <string name="trade_detail_title">商品详情</string>
    <string name="trade_detail_name">商品名称：</string>
    <string name="trade_detail_now_price">商品价格：￥</string>
    <string name="trade_detail_original_price">商品原价：￥</string>
    <string name="trade_detail_phone">联系电话：</string>
    <string name="trade_detail_describe">商品描述：</string>
    <string name="trade_detail_submit">购买</string>

    <!--more fragment-->
    <string name="more_item_msg_title">标题</string>
    <string name="more_item_msg_content">内容</string>
    <string name="more_item_msg_time">时间</string>
    <string name="more_item_msg_name">陈必得</string>
    
    <!--msg fragment-->
    <string name="msg_item_name">用户名</string>
    <string name="msg_item_content">内容</string>
    <string name="msg_item_time">时间</string>

    <!--notice detail-->
    <string name="notice_detail_title">公告详情</string>

    <!--notice add-->
    <string name="notice_add_toolbar_title">发布</string>
    <string name="notice_add_title">标题（必填），2-40字</string>
    <string name="notice_add_content">正文（必填），15-500字</string>

    <!--setting-->
    <string name="setting_toolbar_title">设置</string>
    <string name="setting_person">个人资料</string>
    <string name="setting_about">关于闲货</string>

    <!--about-->
    <string name="about_toolbar_title">关于闲货</string>


</resources>
