<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:layout_marginTop="1dp"
    android:layout_marginStart="1dp"
    android:layout_marginLeft="1dp"
    android:layout_marginEnd="1dp"
    android:layout_marginRight="1dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/notice_detail_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/more_item_msg_title"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="@color/text_color"
        android:textSize="@dimen/font_size_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/notice_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more_item_msg_name"
            android:textSize="@dimen/font_size_small" />

        <TextView
            android:id="@+id/notice_detail_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:text="@string/more_item_msg_time"
            android:textSize="@dimen/font_size_small" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorNormalBackground" />

    <TextView
        android:id="@+id/notice_detail_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginEnd="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:maxLines="4"
        android:ellipsize="end"
        android:text="@string/more_item_msg_content"
        android:textColor="@color/text_color"
        android:textSize="@dimen/font_size_normal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorNormalBackground"/>

</LinearLayout>


