<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/test_msg_title"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/msg_item_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/text_color"
            android:textSize="@dimen/font_size_catalog" />

        <TextView
            android:id="@+id/test_msg_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="15dp"
            android:gravity="center_vertical"
            android:text="@string/msg_item_time"
            android:textColor="#616161"
            android:textSize="@dimen/font_size_small" />

    </LinearLayout>

    <TextView
        android:id="@+id/test_msg_content"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="15dp"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/msg_item_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#616161"
        android:textSize="@dimen/font_size_normal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorNormalBackground" />

</LinearLayout>