<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/notice_my_item_detail"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/square_pic_selector"
        android:orientation="vertical">

        <TextView
            android:id="@+id/notice_my_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/more_item_msg_title"
            android:textColor="@color/text_color"
            android:textSize="@dimen/font_size_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="1dp">

            <TextView
                android:id="@+id/notice_my_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more_item_msg_name"
                android:textSize="@dimen/font_size_small" />

            <TextView
                android:id="@+id/notice_my_item_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:text="@string/more_item_msg_time"
                android:textSize="@dimen/font_size_small" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorNormalBackground" />

        <TextView
            android:id="@+id/notice_my_item_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginEnd="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="4"
            android:text="@string/more_item_msg_content"
            android:textColor="@color/text_color"
            android:textSize="@dimen/font_size_normal" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_background">

        <TextView
            android:id="@+id/notice_my_item_cancel"
            style="@style/MaterialLoginTheme.SelectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="删除公告"
            android:textColor="@color/material_login_register_color"
            android:textSize="@dimen/font_size_normal" />

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/colorNormalBackground" />

</LinearLayout>


