<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:background="@color/black"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="118dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/more_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginStart="6dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/more_item_msg_title"
                android:textColor="@color/md_red_500"
                android:textSize="@dimen/font_size_catalog" />

            <TextView
                android:id="@+id/more_item_content"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginStart="6dp"
                android:layout_marginTop="6dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/more_item_msg_content"
                android:textColor="@color/text_color"
                android:textSize="@dimen/font_size_normal" />

            <TextView
                android:id="@+id/more_item_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginEnd="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginStart="6dp"
                android:text="@string/more_item_msg_time"
                android:textColor="#757575"
                android:textSize="@dimen/font_size_normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/more_pic_selector">

        </LinearLayout>
    </FrameLayout>

</LinearLayout>


