<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="71dp"
    android:background="@drawable/msg_pic_selector"
    android:orientation="vertical">
    <!--android:background="#4566"-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/msg_content_item_img"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="15dp"
            fresco:placeholderImage="@drawable/main_person"
            fresco:placeholderImageScaleType="fitCenter"
            fresco:roundAsCircle="true" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/msg_item_name"
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/msg_item_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/font_size_catalog" />

                <TextView
                    android:id="@+id/msg_item_time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/msg_item_time"
                    android:textColor="#616161"
                    android:textSize="@dimen/font_size_small" />

            </LinearLayout>

            <TextView
                android:id="@+id/msg_item_content"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/msg_item_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#616161"
                android:textSize="@dimen/font_size_normal" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorNormalBackground" />

</LinearLayout>


