<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/selling_item_show_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/square_pic_selector"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/selling_item_img"
                android:layout_width="140dp"
                android:layout_height="140dp" />

            <ImageView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:alpha="0.6"
                android:background="@drawable/sort_pic_selector" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/selling_item_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trade_tag_item_name"
                    android:textColor="@color/md_grey_800"
                    android:textSize="@dimen/font_size_normal" />

                <TextView
                    android:id="@+id/selling_item_now_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trade_tag_item_new_price"
                    android:textColor="@color/md_red_500"
                    android:textSize="@dimen/font_size_normal" />

                <TextView
                    android:id="@+id/selling_item_original_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trade_tag_item_original_price"
                    android:textColor="@color/md_grey_800"
                    android:textSize="@dimen/font_size_normal" />

            </LinearLayout>

        </FrameLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_background">

        <TextView
            android:id="@+id/selling_item_cancel"
            style="@style/MaterialLoginTheme.SelectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="商品下架"
            android:textColor="@color/material_login_register_color"
            android:textSize="@dimen/font_size_normal" />

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/colorNormalBackground" />

</LinearLayout>